Fixed misalignment of topics summary on desktop

--- a/css/browse.css
+++ b/css/browse.css
@@ -114,12 +114,15 @@
 			padding-top: 1rem;
 		}
 
-		main.browse .topics summary {
+		main.browse .topics details[open] summary {
 			cursor: auto;
 			color: var(--colour-default);
 			background-color: #fff;
 			border: 0;
 			height: auto;
+			width: 100%;
+			margin-left: 0;
+			padding: 0;
 		}
 
 		main.browse .topics summary::before {
